// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select does forward props 1`] = `
<select
  disabled={false}
  foo="bar"
  onChange={[Function]}
>
  <option />
</select>
`;

exports[`Select does render 1`] = `
<select
  disabled={false}
  onChange={[Function]}
>
  <option />
</select>
`;

exports[`Select does render with options 1`] = `
<select
  disabled={false}
  onChange={[Function]}
>
  <option />
  <option
    value="test"
  >
    Test
  </option>
  <option
    value="test2"
  >
    Test2
  </option>
</select>
`;

exports[`Select is disabled if there is no onChange func 1`] = `
<select
  disabled={true}
>
  <option />
</select>
`;

exports[`Select shows placeholder 1`] = `
<select
  disabled={false}
  onChange={[Function]}
  placeholder="Placeholder"
>
  <option>
    Placeholder
  </option>
</select>
`;

exports[`Select shows placeholder with default value 1`] = `
<select
  disabled={false}
  onChange={[Function]}
  placeholder="Placeholder (default: DefaultValue)"
>
  <option>
    Placeholder (default: DefaultValue)
  </option>
</select>
`;

exports[`Select takes defaultValue if disabled 1`] = `
<select
  disabled={true}
  placeholder=" (default: DefaultValue)"
  value="DefaultValue"
>
  <option>
     (default: DefaultValue)
  </option>
</select>
`;

exports[`Select takes name as placeholder if no placeholder given 1`] = `
<select
  disabled={false}
  name="Name"
  onChange={[Function]}
  placeholder="Name (default: DefaultValue)"
>
  <option>
    Name (default: DefaultValue)
  </option>
</select>
`;

exports[`Select takes only value if not disabled 1`] = `
<select
  disabled={true}
  placeholder=" (default: DefaultValue)"
  value="DefaultValue"
>
  <option>
     (default: DefaultValue)
  </option>
</select>
`;

exports[`Select takes type as placeholder if no placeholder & name given 1`] = `
<select
  disabled={false}
  onChange={[Function]}
  placeholder="Type (default: DefaultValue)"
  type="Type"
>
  <option>
    Type (default: DefaultValue)
  </option>
</select>
`;
